# my-plan

./: 01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md  README.md  mas_meal_the_plan.txt  meal-planning-crew.md  pyproject.toml  shopping_list.md  weekly_menu_plan.md
gf df menu/: 01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md
gluten-free/: 01 dietary_preference_report.md  02 weekly_menu_plan.md  03 shopping_list.md
src/my_plan/: crew(ori).py  crew.py  main(ori).py  main.py
vegetarian/: dietary_preference_report.md
